# HackSome

./: .gitignore  README.md  pyproject.toml
.codex/: config.toml
.trellis/: .template-hashes.json
buildfactory/: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.mail.yml  docker-compose.yml
buildfactory/.claude/: settings.json
buildfactory/.trellis/: .template-hashes.json  workflow.md
buildfactory/accounts/: README.md
buildfactory/agent/: __init__.py  browser_mcp.sh  credentials.py  loadout.py  proxy_env.sh  resident_loadout.py  runner.py  spec.py
buildfactory/agents/: ceo.yaml  lead.yaml
buildfactory/aiworkforce/: SOP-adding-roles-and-skills.md  ceo-judgment-design-journey.md
buildfactory/orchestration/: __init__.py  (+25 more)
tests/: __init__.py  test_artifacts.py  test_benchmark_fixtures.py  test_cli.py  test_codex_runner.py  test_config.py  test_creative_artifacts.py  test_creative_benchmark.py  test_creative_c7_workflow.py  test_creative_contracts.py  test_creative_curation_workflow.py  test_creative_feedback_workflow.py  test_creative_finalization.py  test_creative_memory.py  test_creative_partial_report.py  test_creative_prompting.py  test_creative_report.py  test_creative_report_projection.py  test_creative_review.py  test_creative_review_backend.py  test_creative_review_server.py  test_creative_workflow.py  test_hub.py  test_prompting.py  test_report.py  test_routes.py  test_state.py  test_task_executor.py  test_workflow.py  test_workflow_idea_loops.py  test_workflow_problem_loops.py  test_workflow_run_lifecycle.py
(+744 files in other folders)
