[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hacksome"
version = "0.1.0"
description = "A local Codex orchestrator for evidence-backed hackathon ideas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.23,<5"]

[project.scripts]
hacksome = "hacksome.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hacksome = [
  "prompts/*.md",
  "prompts/creative/*.md",
  "review_ui/*",
  "schemas/*.json",
  "schemas/creative/*.json",
]
